--- a/index.html
+++ b/index.html
@@ -137,6 +137,22 @@
   </div>
 </div> 
 
+    <div class="cont">
+  <div class="card">
+   <a href="Fire Force Season 1.html">
+    <div class="conta">
+      <img src="https://image.tmdb.org/t/p/original/q2lTO2j4Nzn3zLab0xMHeBya5sw.jpg" class="Avatar">
+      <div class="bottom-left">24/24</div>
+      <div class="top-left">HD</div>
+      <div class="bottom-right">dub</div>
+    </div>
+  </a>
+     <div class="container">
+      <h4 class="card-text">Fire Force Season-2</h4> 
+    </div>
+  </div>
+</div>
+    
 <div class="cont">
   <div class="card">
    <a href="Love-death-robot-S1.html">
