--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </div>
   </a>
      <div class="container">
-      <h4 class="card-text">Fire Force Season-2</h4> 
+      <h4 class="card-text">Fire Force Season-2....</h4> 
     </div>
   </div>
 </div>
