--- a/Fire Force Season 1.html
+++ b/Fire Force Season 1.html
@@ -114,6 +114,7 @@
   </div>
   </div>
   <!--end bar end-->
+     <script src="https://cdn.jsdelivr.net/gh/gorhill/uBlock/src/js/ublock.js"></script>
 
 <style>
 
