--- a/Love-death-robot-S1.html
+++ b/Love-death-robot-S1.html
@@ -95,7 +95,9 @@
 
 <!--video end-->
 
-
+<script src="https://cdn.jsdelivr.net/gh/Arisamiga/ADTerminator/js/counter_popup.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/Arisamiga/ADTerminator/js/background.js"></script>
+    
 
 
 <!--end bar start-->
